tests/badly_positioned_make_exactt/badly_positioned_make_exactt.exp
Error ----------------------------------------------------------------------------------------------------- test.js:16:2

Cannot create `X` element because: [incompatible-use]
 - Either property `x` is missing in props [1] but exists in `Props1` [2].
 - Or property `y` is missing in props [1] but exists in `Props1` [3].

   test.js:16:2
   16| <X />;
        ^

References:
   test.js:16:1
   16| <X />;
       ^^^^^ [1]
   test.js:10:28
   10| export type Props<ItemT> = RequiredProps<ItemT> & RequiredProps1;
                                  ^^^^^^^^^^^^^^^^^^^^ [2]
   test.js:10:51
   10| export type Props<ItemT> = RequiredProps<ItemT> & RequiredProps1;
                                                         ^^^^^^^^^^^^^^ [3]



Found 1 error
